--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,17 @@ dependencies {
 
 	// https://mvnrepository.com/artifact/com.googlecode.json-simple/json-simple
 	implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+
+	// ModelMapperUtils
+	implementation group: 'org.modelmapper', name: 'modelmapper', version: '2.3.8'
+
+	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
+
+	// JWT
+	implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.11.2'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.11.2'
+	runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.11.2'
+
 }
 
 tasks.named('test') {
