--- a/src/main/resources/database/database.properties
+++ b/src/main/resources/database/database.properties
@@ -2,18 +2,18 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 #local DB
-#spring.datasource.url=jdbc:mysql://localhost:3307/miraclebird?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
-#spring.datasource.username=root
-#spring.datasource.password=dlrpehlsp105!
+#spring.datasource.url=
+#spring.datasource.username=
+#spring.datasource.password=
 
 #server DB
-spring.datasource.url=jdbc:mysql://j7c107.p.ssafy.io:3306/miraclebird?useSSL=false&serverTimezone=UTC&useLegacyDatetimeCode=false&allowPublicKeyRetrieval=true
-spring.datasource.username=ssafy
-spring.datasource.password=Miracle107!
+#spring.datasource.url=
+#spring.datasource.username=
+#spring.datasource.password=
 
 # JPA
 #spring.jpa.database-platform={"Database Platform"}
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
 #spring.jpa.hibernate.ddl-auto=none
 
