Backend #feat: properties 수정

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
-spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
-spring.datasource.url=jdbc:mariadb://localhost:3306/bravo_silver_life
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+# logging \uC124\uC815
+logging.level.org.hibernate.type.descriptor.sql=debug
+# console \uC0C9\uC0C1 
+spring.output.ansi.enabled=always
+#\uC624\uB958\uCC98\uB9AC
+server.error.include-exception=true
+server.error.include-stacktrace=always
+# port \uC124\uC815
+server.port8080
