--- a/src/main/resources/database/database.properties
+++ b/src/main/resources/database/database.properties
@@ -2,20 +2,20 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 #local DB
-#spring.datasource.url=
-#spring.datasource.username=
-#spring.datasource.password=
+#spring.datasource.url=jdbc:mariadb://localhost:3306/bsl
+#spring.datasource.username=root
+#spring.datasource.password=ssafy
 
 #server DB
-#spring.datasource.url=
-#spring.datasource.username=
-#spring.datasource.password=
+spring.datasource.url=jdbc:mariadb://k7c208.p.ssafy.io:3306/bsl
+spring.datasource.username=root
+spring.datasource.password=ssafy
 
 # JPA
 #spring.jpa.database-platform={"Database Platform"}
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
-#spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=none
 
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.show_sql=true
