--- a/src/main/resources/database/database.properties
+++ b/src/main/resources/database/database.properties
@@ -2,9 +2,9 @@
 spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 
 #local DB
-#spring.datasource.url=jdbc:mariadb://localhost:3306/bsl
+#spring.datasource.url=jdbc:mariadb://localhost:3306/bravo_silver_life
 #spring.datasource.username=root
-#spring.datasource.password=ssafy
+#spring.datasource.password=root
 
 #server DB
 spring.datasource.url=jdbc:mariadb://k7c208.p.ssafy.io:3306/bsl
@@ -16,7 +16,7 @@ spring.datasource.password=ssafy
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=none
-
+#
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.format_sql=true
