--- a/src/main/resources/database/database.properties
+++ b/src/main/resources/database/database.properties
@@ -9,7 +9,7 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #server DB
 spring.datasource.url=jdbc:mariadb://k7c208.p.ssafy.io:3306/bsl
 spring.datasource.username=root
-spring.datasource.password=ssafy
+spring.datasource.password=root
 
 # JPA
 #spring.jpa.database-platform={"Database Platform"}
