--- a/src/main/resources/database/database.properties
+++ b/src/main/resources/database/database.properties
@@ -7,15 +7,15 @@ spring.datasource.driver-class-name=org.mariadb.jdbc.Driver
 #spring.datasource.password=root
 
 #server DB
-spring.datasource.url=jdbc:mariadb://k7c208.p.ssafy.io:3306/bsl
+spring.datasource.url=jdbc:mariadb://k7c208.p.ssafy.io:3306/BSL
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=tpwlslrnldudnj
 
 # JPA
 #spring.jpa.database-platform={"Database Platform"}
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.hibernate.ddl-auto=create-drop
-spring.jpa.hibernate.ddl-auto=none
+spring.jpa.hibernate.ddl-auto=create
 #
 spring.jpa.open-in-view=false
 spring.jpa.properties.hibernate.show_sql=true
