--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,11 @@
-<<<<<<< HEAD
-# logging \uC124\uC815
-logging.level.org.hibernate.type.descriptor.sql=debug
-# console \uC0C9\uC0C1 
-spring.output.ansi.enabled=always
-#\uC624\uB958\uCC98\uB9AC
-server.error.include-exception=true
-server.error.include-stacktrace=always
-# port \uC124\uC815
-server.port=8080
-=======
-
->>>>>>> 1343a59ea306e12cf72af980d2f92e9938372f03
+## logging \uC124\uC815
+#logging.level.org.hibernate.type.descriptor.sql=debug
+## console \uC0C9\uC0C1
+#spring.output.ansi.enabled=always
+##\uC624\uB958\uCC98\uB9AC
+#server.error.include-exception=true
+#server.error.include-stacktrace=always
+## port \uC124\uC815
+#
+#server.port=8080
+#
