--- a/src/main/resources/oauth2/oauth2.properties
+++ b/src/main/resources/oauth2/oauth2.properties
@@ -1,10 +1,11 @@
-spring.security.oauth2.client.registration.kakao.client-id=fd07ea6216668e3df7c397b52aed9fcc
-spring.security.oauth2.client.registration.kakao.client-secret=rrtURdEakw1mqM6XIkooqJvS3O2Gf6LU
-spring.security.oauth2.client.registration.kakao.redirect-uri=https://k7c208.p.ssafy.io/api/oauth2/callback/kakao
+spring.security.oauth2.client.registration.kakao.client-id=6aedbfc39ab1738bda8e5bbf952587ed
+spring.security.oauth2.client.registration.kakao.client-secret=zVzwaD3ISM71jWvqc2uasloliMlbjHf5
+spring.security.oauth2.client.registration.kakao.redirect-uri="{baseUrl}/{action}/oauth2/code/{registrationId}"
 spring.security.oauth2.client.registration.kakao.client-authentication-method=post
 spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
-spring.security.oauth2.client.registration.kakao.scope=profile_nickname
+spring.security.oauth2.client.registration.kakao.scope=profile_nickname, account_email
 spring.security.oauth2.client.registration.kakao.client-name=Kakao
+
 
 
 #security
