--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -5,6 +5,6 @@ RUN npm install
 COPY . .
 RUN npm run build
 FROM nginx:stable-alpine as production-stage
-
+EXPOSE 80
 
 CMD ["nginx", "-g","daemon off;"]
