--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -6,4 +6,4 @@ COPY . .
 RUN npm run build
 FROM nginx:stable-alpine as production-stage
 EXPOSE 3000
-CMD ["npm","run","dev"]
+CMD ["npm","run","start"]
