--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -63,7 +63,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: update
       properties:
         hibernate:
           #show_sql: true
@@ -99,10 +99,10 @@ logging:
 
 server:
   port: 8080
-#  ssl:
-#    key-store: classpath:keystore.p12
-#    key-store-type: PKCS12
-#    key-store-password: tpwlslrnldudnj!#%
+  ssl:
+    key-store: classpath:keystore.p12
+    key-store-type: PKCS12
+    key-store-password: tpwlslrnldudnj
 #  http2:
 #    enabled: true
 
