--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -100,7 +100,7 @@ logging:
 server:
   port: 8080
   ssl:
-    key-store: classpath:keystore.p12
+    key-store: keystore.p12
     key-store-type: PKCS12
     key-store-password: tpwlslrnldudnj
 #  http2:
