--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -99,10 +99,10 @@ logging:
 
 server:
   port: 8080
-  ssl:
-    key-store: keystore.p12
-    key-store-type: PKCS12
-    key-store-password: tpwlslrnldudnj
+#  ssl:
+#    key-store: keystore.p12
+#    key-store-type: PKCS12
+#    key-store-password: tpwlslrnldudnj
 #  http2:
 #    enabled: true
 
