--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -61,9 +61,10 @@ spring:
       matching-strategy: ant_path_matcher
 
 
+
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: create
       properties:
         hibernate:
           #show_sql: true
